pruebas en oportunidad

--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -337,6 +337,12 @@
     <Compile Include="TbUnidad.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
+    <Compile Include="TbUnidadNegocios.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TbUnidadTecnica.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
     <Compile Include="TbUsuario.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
