--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -3420,6 +3420,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Common.css" />
     <Content Include="Content\css\micss.css" />
+    <Content Include="Content\css\style.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap4.css" />
@@ -3924,6 +3925,7 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Utilidades\TextFile1.txt" />
     <Content Include="Utilidades\TextFile2.txt" />
+    <Content Include="Utilidades\TextFile3.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
