pasando a una DLL entity

--- a/OMI/Web.config
+++ b/OMI/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=DBOPSGI;user id=sa;password=onepro" providerName="System.Data.SqlClient" />
     <add name="ConexionOP" connectionString="Data Source=localhost\sqlexpress;Integrated Security=SSPI;Initial Catalog=DBOPSGI;user id=sa;password=onepro;" providerName="System.Data.SqlClient" />
-    <add name="OPEntities" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=DBOPSGI;user id=sa;password=onepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OIMEntity" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=DBOPSGI;user id=sa;password=onepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
