--- a/OMI/Web.config
+++ b/OMI/Web.config
@@ -21,6 +21,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    <customErrors mode="On"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
