--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -3917,6 +3917,7 @@
     <Content Include="Views\Admon\Details.cshtml" />
     <Content Include="Views\Admon\Edit.cshtml" />
     <Content Include="Views\Solicitud\Concentrado1.cshtml" />
+    <Content Include="Views\Infraestructura\Solicitudes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
