--- a/OMI/Web.config
+++ b/OMI/Web.config
@@ -9,10 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=DBOPSGI;user id=sa;password=onepro" providerName="System.Data.SqlClient" />
-    <add name="ConexionOP" connectionString="Data Source=localhost\sqlexpress;Integrated Security=SSPI;Initial Catalog=DBOPSGI;user id=sa;password=onepro;" providerName="System.Data.SqlClient" />
-    <add name="OIMEntity" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=DBOPSGI;user id=sa;password=onepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=localhost\MSSQL16;Initial Catalog=DBOPSGI;user id=sa;password=onepro" providerName="System.Data.SqlClient" />
+    <add name="OIMEntity" connectionString="metadata=res://*/ModelDB.csdl|res://*/ModelDB.ssdl|res://*/ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\MSSQL16;initial catalog=DBOPSGI;user id=sa;password=onepro;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
