--- a/OIM_DAL/OIM_DAL.csproj
+++ b/OIM_DAL/OIM_DAL.csproj
@@ -110,6 +110,9 @@
     <Compile Include="TbCategoriaRH.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="TbCompras.cs">
+      <DependentUpon>ModelDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="TbEspecialidad.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
