--- a/OMI/packages.config
+++ b/OMI/packages.config
@@ -43,6 +43,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter.es" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net452" />
+  <package id="Microsoft.ReportViewer.WebForms" version="10.0.40219.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
